# debators

./: .gitignore  debate_evaluate.py  design_choice.md  pyproject.toml
agents/: debate_agents.py  decomposer.py  llm_judges.py
database/: document_indexer.py
judges/: llm_judges.py
prompts/: system_instructions.json
tools/: web_search.py
utils/: query_mongo.py  reports.py  vectordb.py
workflows/: debate_pipeline.py  report_writing.py
