[project]
name = "debate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "httpx-sse>=0.4.3",
    "langchain>=1.2.9",
    "langchain-cerebras>=0.8.2",
    "langchain-google-genai>=4.2.0",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchainhub>=0.1.21",
    "ollama>=0.6.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tavily-python>=0.7.21",
]
